--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <body>
 
-<p>This is my GitHub.io hosted site. Check out my blog at: http://hack-r.com </p>
+<p>This is my GitHub.io hosted site! </p>
+<p>My new blog: http://www.hack-r.com </p>
 <pre>
 ░░░░░░░░░░░░░▲
 ░░░░░░░░░░░░▲ ▲
@@ -41,7 +42,6 @@
 ░░░░░░░░▓▓▓░░░░▓▓▓
 ░░░░░░░░▓▓▓░░░░▓▓▓
 
-newfags don’t know how to triforce
 </pre>
 
 </body>
