--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
 <p>This is my GitHub.io hosted site! </p>
-<p>My new blog: http://www.hack-r.com </p>
+<p>My new blog: </p>
+ <a href="http://www.hack-r.com"> http://www.hack-r.com</a> 
 <pre>
 ░░░░░░░░░░░░░▲
 ░░░░░░░░░░░░▲ ▲
@@ -43,6 +44,6 @@
 ░░░░░░░░▓▓▓░░░░▓▓▓
 
 </pre>
-
+ <a href="https://www.github.com/hack-r">My GitHub.com Page</a> 
 </body>
 </html>
