--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 ░░░░░░░░▓▓▓░░░░▓▓▓
 
 </pre>
- <a href="https://www.github.com/hack-r">My GitHub.com Page</a> 
+
+
+
+ <a href="https://www.github.com/hack-r">My GitHub.com Page</a>
+  <a href="https://stackoverflow.com/users/3604745/hack-r">My StackOverflow Page</a> 
 </body>
 </html>
