--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
 
 
- <a href="https://www.github.com/hack-r">My GitHub.com Page</a>
-  <a href="https://stackoverflow.com/users/3604745/hack-r">My StackOverflow Page</a> 
+<p> <a href="https://www.github.com/hack-r">My GitHub.com Page</a> </p>
+<p> <a href="http://www.linkedin.com/in/datasci">My LinkedIn Page</a> </p>
+<p> <a href="https://stackoverflow.com/users/3604745/hack-r">My StackOverflow Page</a> </p>
+<p> <a href="https://academia.stackexchange.com/questions/26235/is-there-an-affordable-way-for-non-students-to-subscribe-to-multi-journals-archi/27558#27558">My Trending Academia StackExchange Question</a> </p>
 </body>
 </html>
